[gd_scene load_steps=4 format=3 uid="uid://cnqpq8oim87rj"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_4rccs"]
[ext_resource type="Texture2D" uid="uid://c20468uetw2qr" path="res://graphics/player/player.png" id="1_247km"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ddako"]
radius = 63.0079

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_4rccs")

[node name="PlayerImg" type="Sprite2D" parent="."]
position = Vector2(5, -1)
texture = ExtResource("1_247km")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 34)
shape = SubResource("CircleShape2D_ddako")

[node name="LaserTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[node name="LaserStart" type="Node2D" parent="."]

[node name="Point1" type="Marker2D" parent="LaserStart"]
position = Vector2(16, -93)

[node name="Point2" type="Marker2D" parent="LaserStart"]
position = Vector2(25, -96)

[node name="Point3" type="Marker2D" parent="LaserStart"]
position = Vector2(32, -93)

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
